# sanctions-pipeline

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli.py  issue.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: crawl_dfat.py
src/sanctions_pipeline/: __init__.py  cli.py  screen.py  transform.py  validate.py
tests/: test_cli.py  test_crawl_dfat.py  test_transform.py  test_validate.py
