[project]
name = "sanctions-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raj Sandhu", email = "rajsandhu@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "followthemoney>=4.3.0",
    "httpx>=0.28.1",
    "nomenklatura>=4.1.9",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "typer>=0.20.0",
]

[project.scripts]
sanctions-pipeline = "sanctions_pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sanctions_pipeline"]